test/decl_parsing/type_name.c
// RUN: %check -e %s

i=1a3; // CHECK: error: invalid suffix on integer constant (a)
